nth, readme url

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
 <div>
     <label> <input id="year" type="number"> År </label> <br/>
-    <label> <input id="month" type="number" > Måned  </label><br/>
-    <button onclick="getNinthLastBankDay()">9. sidste bankdag</button>
+    <label> <input id="month" type="number"> Måned </label><br/>
+    <label> <input id="nth" type="number"> N'te </label><br/>
+    <button onclick="getNthLastBankDay()">n'te sidste bankdag</button>
     <pre id="output"></pre>
 </div>
 
